@@ -4,6 +4,8 @@ import javax.ws.rs.core.Configuration;
 
 import org.apache.cayenne.query.SelectQuery;
 
+import com.nhl.link.rest.annotation.listener.QueryAssembled;
+import com.nhl.link.rest.annotation.listener.SelectServerParamsApplied;
 import com.nhl.link.rest.runtime.ILinkRestService;
 import com.nhl.link.rest.runtime.LinkRestRuntime;
 
@@ -20,6 +22,12 @@ public class LinkRest {
 		return service(config).select(root);
 	}
 
+	/**
+	 * @deprecated since 1.24. Direct dependency on Cayenne should not exist in
+	 *             the user-facing API. If you need to run a custom query, use
+	 *             listener annotated with {@link QueryAssembled} or
+	 *             {@link SelectServerParamsApplied}.
+	 */
 	public static <T> SelectBuilder<T> select(SelectQuery<T> query, Configuration config) {
 		return service(config).select(query);
 	}
