@@ -6,6 +6,7 @@ Release 1.24
 #161 Unmapped PK causes response encoding to fail
 #164 Auto-compile Lr-annotated properties of entity objects
 #168 Refactor DataResponse use
+#169 Deprecate LinkRest and ILinkRestService methods that take SelectQuery parameter
 
 Release 1.23
 
